@@ -1,3 +1,10 @@
+2013-01-07  H.J. Lu  <hongjiu.lu@intel.com>
+
+	PR gas/14899
+	* Makefile.def (dependencies): Make all-binutils, all-gprof,
+	all-ld and all-gold depend on all-gas.
+	* Makefile.in: Regenerated.
+
 2012-12-29  Ben Elliston  <bje@gnu.org>
 
 	* config.guess: Update to 2012-12-29 version.
